# Storyous

./: .env  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: prod.list
backend/.docker/: Dockerfile
backend/app/: __init__.py  migrations.py  migrations_demo.py  pyproject.toml  setup.cfg
backend/app/common/config/: __init__.py  settings.py
backend/app/common/db/: __init__.py  connect_sql.py  mssql.py  utils.py
backend/app/common/services/: cypher.py  cypher_az.py
backend/app/storyapi/config/: __init__.py  settings.py
backend/app/storyapi/db/: __init__.py  auth.py  bills.py  bills_sql.py  merchants.py  merchants_sql.py
backend/app/storyapi/db/repos/: auth_sql.py  bills_sql.py  marchants_sql.py
backend/app/storyapi/service/: auth.py  bills.py  merchants.py
backend/tests/: conftest.py  test_mssql_db.py  test_storyous_api.py  test_token.py
backend/tests/source/json/: bills_list.json
db/: StoryousAPI.sql
kubernetes/: Readme.md
storious-chart/: Readme.md
