[metadata]
name = story_api

[options]
python_requires = >=3.10, <4
packages = find:

install_requires =
    typing_extensions==4.12.2
    typing_inspect==0.9.0
    fastapi-utils==0.7.0
    python-multipart==0.0.9
    Authlib==1.3.1
    requests==2.32.3
    itsdangerous==2.1.1
    dacite==1.6.0
    pyjwt==1.7.1
    httpx==0.27.0

    shortuuid==1.0.8
    croniter==1.3.4
    dnspython==2.4.2
    pydantic==2.8.0
    pydantic-settings==2.3.4

    azure-core==1.29.1
    azure-identity==1.14.1
    pymssql==2.3.0
    pyodbc==5.0.1

[tool:pytest]
collect_ignore = ['setup.py']
addopts = -p no:warnings
testpaths = tests
